src/test/resources/refCompilerOutput/invalid/semanticErr/expressions/moreArrExpr.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 14:10 -- Incompatible type INT[]
